Changelog
=========

2.4.0 (TBD)
-----------
- Add replicas instead of slaves

2.3.0 (2016-08-22)
------------------
- Better support for custom object mappers

2.2.1 (2016-08-03)
------------------
- Update user agent to new format

2.2.0 (2016-07-27)
------------------
- Fix browse query
- Fix browse with empty index

2.1.0 (2016-07-12)
------------------
- Fix Query#toParam
- Fix secure key generation
- Randomize hosts
- Add support for Google AppEngine

2.0.0 (2016-07-01)
------------------
- See migration guide: https://github.com/algolia/algoliasearch-client-java-2/wiki/Migration-guide-from-1.x-to-2.x
- Add support for Google AppEngine
- Add type safety

1.7.0 (2016-05-24)
------------------
- Add minimumAroundRadius parameter
- Reduce all timeouts to 2 seconds
- Drop support for Java 1.6

1.6.6 (2016-02-01)
------------------
- Add validUntil as a query parameter
- Add restrictIndices as a query parameter

1.6.5 (2016-01-28)
------------------
- Add snippetEllipsisText as a search parameter

1.6.4 (2015-12-29)
------------------
- Fix DNS records used by the deleteObject method

1.6.3
------------------
- Skipped version

1.6.2
------------------
- Skipped version

1.6.1 (2015-12-02)
------------------
- Improve the performance of the deleteByQuery method

1.6.0 (2015-10-29)
------------------
- New Secured API keys format

1.5.0 (2015-10-12)
------------------
- Added remove stop words query parameter
- Added support of similar queries

1.4.0 (2015-10-02)
------------------
- Upgrade to httpclient 4.5.1

1.3.17 (2015-09-30)
-------------------
- Added support of multiple bounding box for geo-search
- Added support of polygon for geo-search
- Added support of automatic radius computation for geo-search
- Added support of disableTypoToleranceOnAttributes

1.3.16 (2015-09-21)
-------------------
- Ensure the JSON answer is read before trying to tokenize to throw IOException instead of JSONException

1.3.15 (2015-09-15)
-------------------